Upgrade multi-stage docker build to Java 11